--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1062,7 +1062,7 @@ OD_Summary <- rbind(OD_IF_Summary,
 ##################################
 # Replotting the heatmaps
 ##################################
-par(mfrow=c(2,3),
+par(mfrow=c(3,2),
     mar = c(2.5,2.2,2,2.5))
 Plot_Space_Range(OD_IF_DevianceScores,"IF",1.0)
 Plot_Space_Range(OD_EIF_DevianceScores,"EIF",1.0)
@@ -1070,6 +1070,10 @@ Plot_Space_Range(OD_SCIFOREST_DevianceScores,"SCIFOREST",1.0)
 Plot_Space_Range(OD_FCF_DevianceScores,"FCF",1.0)
 Plot_Space_Range(OD_DIF_DevianceScores,"DIF",1.0)
 Plot_Space_Range(OD_BIF_DevianceScores,"BIF",1.0)
+mtext("Outlier Scores",
+      side = 3,
+      line = -1.25,
+      outer = TRUE)
 
 ##################################
 # Consolidating all evaluation results
